adding header photo + credit

--- a/_posts/2018-01-30-2018-liberations.md
+++ b/_posts/2018-01-30-2018-liberations.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 current: post
-cover:  assets/images/writing.jpg
+cover:  assets/images/liberation.jpg
 navigation: True
 title: #2018Liberation
 date: 2018-01-08 12:24:00
@@ -18,3 +18,5 @@ After listening to [Episode 2 of No, You Go podcast](http://www.noyougoshow.com/
 I felt like I should state what mine is. I love goals and love achieving them. But I do feel like certain things are expected of me that I can’t always fulfill. I’m known as the fairly happy-go-lucky type at my work. I’m usually the enthusiastic one that tends to be friendly to any person that comes along. 
 
 Though in 2017, my world went on a rollercoaster ride with various things in my work and personal life. On social media/on screen, I tend to be “living the good life”. However, it’s not always rainbows behind the curtain. I don’t talk about the low times a lot just because I don’t want to burden people with my problems. But then I realize that people who care about me know it’s not realistic to think I’m great all the time. So my liberation for 2018 is not lying about being ok. I may not necessarily be honest to everyone that asks but for the people that do matter to me, I’ll give them the courtesy of being honest. I’m finding out more that people are willing to help me during those rough times than I thought. Since I’m working from home, I’m more aware of the importance of my mental health.
+
+[photo credit: Alice Popkorn](https://www.flickr.com/photos/alicepopkorn/6032916957/in/photolist-ac7h2B-8cKNvz-5EHzAT-jEyBZx-21onj8F-8PK4Z4-UC8gNd-DGYMb1-jXtmHu-dXMXE-GJxf6d-8vuTs4-SkVk7F-84c1uP-7eW9Ty-S1p2mW-kdU15e-4R2cog-8hcGEb-beRRT6-9ppdQf-6fS9GK-pfULWP-qqPxHG-W3MuWz-ER2oP-VEamRQ-Wk11bP-6iBSny-qCD1AU-8H6je3-V1RAwX-V1SdBn-o1VGt8-XGw1zo-2aoZE8-qXsmV8-pxL8S5-hQek5Y-WuLG93-amMBWJ-VFuYjK-ds7a2-TeoUzW-nVvmjA-WUf8kS-GbjNzh-4vXFsD-XLAAin-XGw4mA)
